force-app/main/default/objects/BU_Tiering__c/BU_Tiering__c.object-meta.xml
<CustomObject>
    <description>10/03/2011 VI: functionality customized as per latest business requirements. Case 175; Rating given by each BU for a client</description>
    <label>Business Unit Tier</label>
    <nameField>
        <displayFormat>BUR ID-{000000}</displayFormat>
        <label>Business Unit Tier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Unit Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>