force-app/main/default/objects/BU_Tiering__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>The client being rated by a BU</description>
    <inlineHelpText>The client being rated by a BU</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00NR0000000VaNgMAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>