force-app/main/default/objects/BU_Tiering__c/fields/SA_BU_Tiering__c.field-meta.xml
<CustomField>
    <fullName>SA_BU_Tiering__c</fullName>
    <description>Assign the tier that your BU ranks this client</description>
    <inlineHelpText>Assign the tier that your BU ranks this client</inlineHelpText>
    <label>Business Unit Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>