force-app/main/default/objects/BU_Tiering__c/fields/User_City__c.field-meta.xml
<CustomField>
    <fullName>User_City__c</fullName>
    <description>10/03/2011 VI: case 175. store static value of created person&apos;s details. must not be updated when user changes divisions. populated via workflow - BU tier Defaults</description>
    <label>User City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>